<resources>
    <string name="app_name">Path Finder</string>
    <string name="feedback_settings_title">Feedback Settings</string>
    <string name="vibrate_icon_content_description">Vibrate Icon</string>
    <string name="vibrate">Vibrate</string>
    <string name="vibrate_option_description">Vibrate device when an upcoming collision is detected</string>
    <string name="sound_icon_content_description">Sound Icon</string>
    <string name="sound">Sound</string>
    <string name="sound_option_description">Produce a sound when an upcoming collision is detected</string>
    <string name="settings_menu_title">Settings</string>
    <string name="alert_tone_prompt">Choose alert tone</string>
    <string name="no_headphone_mode_description">We recommend using a stereo headset for best results.  Tones will sound from either the left headphone or right headphone.  Louder tones represent objects that are closer and or more directly in the path of the phone. \nUse the below buttons to hear how the sounds will differ.</string>
    <string name="alert_tone_header">Alert tone</string>
    <string name="no_headphones_mode_title">No Headphones Mode</string>
    <string name="test_sound_settings_header">Test Sound Settings</string>
    <string name="left_button">Left</string>
    <string name="right_button">Right</string>
    <string name="center_button">Center</string>
    <string name="no_headphone_suggestion">No headphone mode recommended</string>
    <string-array name="alert_tone_array">
        <item>Beep</item>
        <item>Jazz</item>
        <item>Snippy</item>
        <item>Voice</item>
    </string-array>
    <string name="onboarding">OnBoarding</string>
    <string name="action_settings">Settings</string>
    <string name="text_path_finder">Help Find A Better Path</string>
    <string name="text_notification_vibration">Notification Method Option - Vibration</string>
    <string name="text_notification_sound">Notification Method Option- Sound</string>
    <string name="title_activity_onboarding">Path Finder</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menu_about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_title">About</string>
    <string name="onboarding_title">Onboarding</string>
    <string name="pitch_adjust_title">Pitch Adjust</string>
    <string name="oom_message">This app uses a lot of memory can not run on all devices.  You can try closing other apps before startup.</string>
    <string name="oom_title">Out of Memory</string>
    <string name="home_title">Home</string>
    <string name="settings_title">Settings</string>
</resources>
