<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SettingsFragment">

    <TextView
        android:id="@+id/settings_feedback_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/feedback_settings_title"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/vibrate_icon_image_view"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/vibrate_icon_content_description"
        android:src="@drawable/ic_vibrate_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/settings_feedback_vibrate_switch"
        app:layout_constraintEnd_toStartOf="@id/settings_feedback_vibrate_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_feedback_title"
        app:layout_constraintTop_toTopOf="@id/settings_feedback_vibrate_switch" />

    <Switch
        android:id="@+id/settings_feedback_vibrate_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/vibrate"
        android:textColor="@android:color/primary_text_light"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/vibrate_icon_image_view"
        app:layout_constraintTop_toBottomOf="@id/settings_feedback_title" />

    <TextView
        android:id="@+id/vibrate_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/vibrate_option_description"
        app:layout_constraintEnd_toEndOf="@id/settings_feedback_vibrate_switch"
        app:layout_constraintStart_toStartOf="@id/vibrate_icon_image_view"
        app:layout_constraintTop_toBottomOf="@id/settings_feedback_vibrate_switch" />

    <ImageView
        android:id="@+id/sound_icon_image_view"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/sound_icon_content_description"
        android:src="@drawable/ic_sound_icon_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/settings_feedback_sound_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/settings_feedback_sound_switch" />


    <Switch
        android:id="@+id/settings_feedback_sound_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sound"
        android:textColor="@android:color/primary_text_light"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sound_icon_image_view"
        app:layout_constraintTop_toBottomOf="@id/vibrate_description" />

    <TextView
        android:id="@+id/sound_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sound_option_description"
        app:layout_constraintEnd_toEndOf="@id/settings_feedback_sound_switch"
        app:layout_constraintStart_toStartOf="@id/sound_icon_image_view"
        app:layout_constraintTop_toBottomOf="@id/settings_feedback_sound_switch" />

    <View
        android:id="@+id/settings_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sound_description" />

</androidx.constraintlayout.widget.ConstraintLayout>
